# serde_ext

./: Cargo.toml  README.md
serde_ext/: Cargo.toml  README.md
serde_ext/src/: config.rs
serde_ext/src/ser/: ser_bytes.rs
serde_ext_core/: Cargo.toml  README.md
serde_ext_core/src/: config.rs  lib.rs
serde_ext_core/src/de/: deserializer.rs  mod.rs
serde_ext_core/src/ser/: mod.rs
serde_json_ext/: Cargo.toml
serde_json_ext/src/: config.rs  from.rs  lib.rs  to.rs
serde_json_ext/src/ser/: ser_bytes.rs
serde_toml_ext/: Cargo.toml  README.md
serde_toml_ext/examples/: from_reader.rs  from_str.rs  from_value.rs  to_string.rs  to_string_pretty.rs
serde_toml_ext/src/: to.rs
toml_ext/: Cargo.toml  README.md
toml_ext/examples/: from_reader.rs  from_str.rs  from_value.rs  to_string.rs  to_string_pretty.rs
toml_ext/src/: config.rs  from.rs  lib.rs  to.rs
toml_ext/src/de/: access.rs  deserializer.rs  from.rs  mod.rs  visitor.rs
toml_ext/src/ser/: mod.rs  serializer.rs  to.rs
