[workspace]
resolver = "3"
members = ["serde_ext_core", "serde_json_ext", "serde_toml_ext"]

[workspace.dependencies]
serde_ext_core = { version = "0.1.0", path = "serde_ext_core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
base64 = "0.22"
hex = "0.4"
toml = "1.1.2"
