[package]
name = "serde_ext_core"
version = "0.1.0"
edition = "2024"
description = "Shared configuration and byte encoding helpers for serde extension crates"
license = "MIT"
repository = "https://github.com/tiannian/serde_ext"

[dependencies]
base64 = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
