[package]
name = "serde_json_ext"
version = "0.1.9"
edition = "2024"
description = "A serde_json extension that provides configurable bytes serialization formats (hex, base64, default array)"
license = "MIT"
repository = "https://github.com/tiannian/serde_ext"

[dependencies]
serde_ext = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
serde_bytes = { workspace = true }
