[package]
name = "serde_toml_ext"
version = "0.1.1"
edition = "2024"
description = "A toml extension that provides configurable bytes serialization formats (hex, base64, default array)"
license = "MIT"
repository = "https://github.com/tiannian/serde_ext"

[dependencies]
serde_ext_core = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
serde_bytes = { workspace = true }
